Fixed firefox layout issue

--- a/src/main/webapp/styles/app.scss
+++ b/src/main/webapp/styles/app.scss
@@ -177,6 +177,7 @@ SEARCH
     .icon{
       position: absolute;
       top: 50%;
+      left: 0;
       margin-left: 17px;
       margin-top: 8px;
       z-index: 1;
